# barycentric-shaders-OpenGL

./: .gitignore  README.md  informal_design_notes.txt  informal_notes.txt
OpenGLTest/: CMakeLists.txt
OpenGLTest/include/: MyShader.h
OpenGLTest/include/glad/: glad.h
OpenGLTest/src/: MyShader.cpp  codeRuntest.cpp  glad.c  main.cpp
OpenGLTest/src/shaders/: test_fshader.glsl  test_vshader.glsl
OpenGLTest/tests/: MyShaderTests.cpp
ProjectSetupNGL/: CMakeLists.txt  README.md
ProjectSetupNGL/include/: BaryObj.h  NGLScene.h
ProjectSetupNGL/shaders/: BlendingFragmentShader.glsl  DiffuseFragmentShader.glsl  FinalQuadFragmentShader.glsl  FragmentShader.glsl  HandFragmentShader.glsl  MeshVertexShader.glsl  OutlineFragmentShader.glsl  QuadVertexShader.glsl  ShadowFragmentShader.glsl  SpecularFragmentShader.glsl  UVFragmentShader.glsl  VertexShader.glsl
ProjectSetupNGL/src/: BaryObj.cpp  NGLScene.cpp
ProjectSetupNGL/textures/: my_hand_uv_handMat_BaseColor_sRGB.png:Zone.Identifier
include/: NGLScene.h
shaders/: DiffuseFragmentShader.glsl  FinalQuadFragmentShader.glsl  MeshVertexShader.glsl  OutlineFragmentShader.glsl  QuadVertexShader.glsl  ShadowFragmentShader.glsl  SpecularFragmentShader.glsl  UVFragmentShader.glsl
src/: NGLScene.cpp
